--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@preline/accordion": "^2.0.0",
+    "@tanstack/react-query": "^5.8.4",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.6.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "nodemailer": "^6.9.7",
