--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.8.4",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.2",
+    "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "nodemailer": "^6.9.7",
